[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Bukhari Script.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/Elements/Buttons/ButtonGreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/GamesMenu.gd" type="Script" id=4]
[ext_resource path="res://arrow-back.png" type="Texture" id=5]
[ext_resource path="res://Menus/RecyclerView/GamesScrollBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menus/Elements/Buttons/ButtonBlue.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[node name="GamesMenu" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_top = 1.12247
margin_right = 1022.0
margin_bottom = 575.122
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI"]
margin_left = 240.0
margin_top = 40.0
margin_right = 792.0
margin_bottom = 143.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
text = "Games"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 100.0
margin_top = 168.0
margin_right = 1022.0
margin_bottom = 432.0
size_flags_horizontal = 4
size_flags_vertical = 9
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamesScrollBox" parent="UI/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="notification" type="Label" parent="UI"]
margin_left = 8.0
margin_top = 464.0
margin_right = 360.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="UI"]
margin_left = 64.0
margin_top = 40.0
margin_right = 149.0
margin_bottom = 126.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" parent="UI" instance=ExtResource( 2 )]
margin_left = 176.0
margin_top = 456.0
margin_right = 472.0
margin_bottom = 552.0

[node name="ButtonText" parent="UI/NewGameButton" index="0"]
text = "New game"

[node name="JoinGameButton" parent="UI" instance=ExtResource( 7 )]
margin_left = 560.0
margin_top = 456.0
margin_right = 856.0
margin_bottom = 552.0

[node name="ButtonText" parent="UI/JoinGameButton" index="0"]
text = "Join"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="UI/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="UI/JoinGameButton" to="." method="_on_JoinGameButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]

[editable path="UI/NewGameButton"]

[editable path="UI/JoinGameButton"]
